# json-for-git

./: README.md  json-for-git.cabal  json-for-git.hs  testRW.hs
Text/JSON/Git/: Pretty.hs
