name:                json-for-git
version:             0.1.0.0
synopsis:            git-friendly JSON pretty printer
-- description:         
license:             MIT
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable json-for-git
  main-is:           json-for-git.hs 
  -- other-modules:       
  build-depends:     base ==4.6.*,
                     json ==0.7.*,
                     pretty ==1.1.*,
                     bytestring ==0.10.*,
                     filepath ==1.3.*,
                     swf
